# liru-bot

./: .gitignore  BENUTZUNG_de.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  config.yml.example
examples/: emit_overlay.rs
hooks/: pre-push
scripts/: build-pgo.ps1
src/: blocklist.rs  config.rs  conversation.rs  daily_counter.rs  egtb.rs  embedded_engine.rs  engine_wrapper.rs  exp_overlay.rs  homemade.rs  lib.rs  lichess.rs  lichess_bot.rs  lichess_types.rs  main.rs  matchmaking.rs  model.rs  online_book.rs  opponent_db.rs  polyglot.rs  timer.rs
tools/: .release_allow  prerelease_check.py
